Fixed some issues with the about indicator triggering for changes to fields other than the description field, and fixed its layout issues too.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -230,7 +230,10 @@ body {
 
 		margin-left: 5px;
 
-		display: inline-block;
+		display: block;
+		position: absolute;
+		right: 5px;
+		top: 14px;
 
 		&.hide {
 			display: none;
